Updates college title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div id="main">
             <h2>Michael Dill</h2>
-            <h3>BS in Electrical Engineering, <a href="https://vt.edu" target="_blank">VT</a></h3>
+            <h3>BS Electrical Engineering, <a href="https://vt.edu" target="_blank">VT</a></h3>
             <h3>Sr. Controls Engineer</h3>
             <h3>Software Designer</h3>
             <ul>
