--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="main">
             <h2>Michael Dill</h2>
             <h3>BS Electrical Engineering, <a href="https://vt.edu" target="_blank">VT</a></h3>
-            <h3>Sr. Controls Engineer</h3>
+            <h3>Controls Engineer II, <a href="https://www.aic-company.com/" target="_blank">AIC</a></h3>
             <h3>Software Designer</h3>
             <ul>
             <li>Bedford, VA <a href="https://www.google.com/maps/place/Bedford,+VA+24523/@37.3358526,-79.5583516,13z/data=!3m1!4b1!4m5!3m4!1s0x884d3029553bf287:0xf08727a963fbb0d0!8m2!3d37.3343079!4d-79.5230877" target="_blank"><img height="14" width="14" src="images/home.png"/></a></li>
