--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h3>Controls Engineer II, <a href="https://www.aic-company.com/" target="_blank">AIC</a></h3>
             <h3>Software Designer</h3>
             <ul>
-            <li>Bedford, VA <a href="https://www.google.com/maps/place/Bedford,+VA+24523/@37.3358526,-79.5583516,13z/data=!3m1!4b1!4m5!3m4!1s0x884d3029553bf287:0xf08727a963fbb0d0!8m2!3d37.3343079!4d-79.5230877" target="_blank"><img height="14" width="14" src="images/home.png"/></a></li>
+            <li>Bedford, VA <a href="https://www.google.com/maps/place/Bedford,+VA+24523" target="_blank"><img height="14" width="14" src="images/home.png"/></a></li>
             <li>&#100;&#105;&#108;&#108;<span>&#64;</span>mdill<span>&#46;</span>co <img height="14" width="14" src="images/email.png"/></li>
             <li><a href="https://bitbucket.org/mdill" target="_blank">bitbucket.org/mdill <img height="14" width="14" src="images/bitbucket.png"/></a></li>
         </div>
