Changes d.png to favicon.png

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <link rel="SHORTCUT ICON" href="images/d.png">
+        <link rel="SHORTCUT ICON" href="images/favicon.png">
         <title>Michael Dill</title>
         <link href="style.css" type="text/css" rel="stylesheet">
     </head>
