--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
             <li><a href="https://www.google.com/maps/place/Bedford,+VA+24523" target="_blank">Bedford, VA <img height="14" width="14" src="images/home.png"/></a></li>
             <li>&#100;&#105;&#108;&#108;<span>&#64;</span>mdill<span>&#46;</span>co <img height="14" width="14" src="images/email.png"/></li>
-            <li><a href="https://bitbucket.org/mdill" target="_blank">bitbucket.org/mdill <img height="14" width="14" src="images/bitbucket.png"/></a></li>
+            <li><a href="https://bitbucket.org/mdill" target="_blank">bitbucket.org/mdill <img height="14" width="14" src="images/git.png"/></a></li>
         </div>
 
         <footer><a href="pubkey.txt" class="gpg" target="_blank">F619 5910 66F9 4560</a></footer>
