--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <div id="main">
             <h2>Michael Dill</h2>
             <h3>BS Electrical Engineering, <a href="https://vt.edu" target="_blank">VT</a></h3>
-            <h3>Controls Engineer II, <a href="https://www.aic-company.com/" target="_blank">AIC</a></h3>
+            <!-- <h3>Controls Engineer II, <a href="https://www.aic-company.com/" target="_blank">AIC</a></h3> --!>
+            <h3>Senior Controls Engineer, <a href="https://www.bwxt.com/" target="_blank">BWXT</a></h3>
             <h3>Software Designer</h3>
             <ul>
             <li><a href="https://www.google.com/maps/place/Bedford,+VA+24523" target="_blank">Bedford, VA <img height="15" width="15" src="images/home_color.png"/></a></li>
