Adds LinkedIn data

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="https://www.google.com/maps/place/Bedford,+VA+24523" target="_blank">Bedford, VA <img height="15" width="15" src="images/home_color.png"/></a></li>
             <li>&#100;&#105;&#108;&#108;<span>&#64;</span>mdill<span>&#46;</span>co <img height="10" width="14" src="images/email_color.png"/></li>
             <li><a href="https://bitbucket.org/mdill" target="_blank">bitbucket.org/mdill <img height="14" width="14" src="images/git_color.png"/></a></li>
+            <li><a href="https://www.linkedin.com/in/michael-dill-430b05281?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BFpN3I%2BPFQoes9BYXqMWHPg%3D%3D" target="_blank">Linked in <img height="14" width="14" src="images/linkedin.png"/></a></li>
         </div>
 
         <footer><a href="pubkey.txt" class="gpg" target="_blank">F619 5910 66F9 4560</a></footer>
