--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!-- <h3>Controls Engineer II, <a href="https://www.aic-company.com/" target="_blank">AIC</a></h3> --!>
             <h3>Sr Manufacturing Controls Engineer, <a href="https://www.abbott.com/" target="_blank">Abbott</a></h3>
             <h3>Sr Electrical Controls Systems Engineer, <a href="https://www.bwxt.com/" target="_blank">BWXT</a></h3>
-            <h3>Software Designer</h3>
+            <h3>Software Designer, <a href="https://mdill.co" target="_blank">MDill.co</a></h3>
             <ul>
             <li><a href="https://www.google.com/maps/place/Bedford,+VA+24523" target="_blank">Bedford, VA <img height="15" width="15" src="images/home_color.png"/></a></li>
             <li>&#100;&#105;&#108;&#108;<span>&#64;</span>mdill<span>&#46;</span>co <img height="10" width="14" src="images/email_color.png"/></li>
