Fixes fonts, spacing, and kerning

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 
     <body>
         <div id="main">
-            <h2>Michael Dill</h2>
-            <h3><a href="https://www.vt.edu/academics/majors/electrical-engineering.html" target="_blank">BS Electrical Engineering</a>, <a href="https://vt.edu" target="_blank">VT</a></h3>
-            <!-- <h3>Controls Engineer II, <a href="https://www.aic-company.com/" target="_blank">AIC</a></h3> --!>
-            <h3>Sr Manufacturing Controls Engineer, <a href="https://www.abbott.com/" target="_blank">Abbott</a></h3>
-            <h3>Sr Electrical Controls Systems Engineer, <a href="https://www.bwxt.com/" target="_blank">BWXT</a></h3>
-            <h3>Software Designer, <a href="https://mdill.co" target="_blank">MDill.co</a></h3>
+			<ul>
+            <h1>Michael Dill</h1>
+            <h2><a href="https://www.vt.edu/content/vt_edu/en/tags.html/vt_edu:academics/degree-types/bs" target="_blank">BS</a> <a href="https://www.vt.edu/academics/majors/electrical-engineering.html" target="_blank">Electrical Engineering</a>, <a href="https://vt.edu" target="_blank">Virginia Tech</a></h2>
+			<ul>
+            <h2>Sr Manufacturing Controls Engineer, <a href="https://www.abbott.com/" target="_blank">Abbott</a></h2>
+            <h2>Sr Electrical Controls Systems Engineer, <a href="https://www.bwxt.com/" target="_blank">BWXT</a></h2>
+            <!-- <h2>Controls Engineer II, <a href="https://www.aic-company.com/" target="_blank">AIC</a></h2> -->
+			<ul>
+            <h2>Software Developer & Designer, <a href="https://mdill.co" target="_blank">MDill.co</a></h2>
             <ul>
             <li><a href="https://www.google.com/maps/place/Bedford,+VA+24523" target="_blank">Bedford, VA <img height="15" width="15" src="images/home_color.png"/></a></li>
             <li>&#100;&#105;&#108;&#108;<span>&#64;</span>mdill<span>&#46;</span>co <img height="10" width="14" src="images/email_color.png"/></li>
